# Optical

./: ToDo.md  pyproject.toml
src/: __main__.py
src/general/: __main__.py  data.py
src/optical_jomarie/: __init__.py
src/optical_jomarie/PL/: TDPL.py
src/optical_jomarie/absorption/elliott/: elliott.py
src/optical_jomarie/general/: ez_plots.py  organize.py  peak_anaylsis.py  peak_general.py
tests/: arrhenius.py  quicktest.py
